# tiny-path-tracer

./: .gitignore  CMakeLists.txt  README.md  camera.h  config.ini  hitable.h  hitableList.h  main.cpp  ray.h  sphere.h  vec3.h
headers/: aabb.h  camera.h  hitable.h  hitable_list.h  material.h  perlin_noise.h  ray.h  rect_box.h  sphere.h  texture.h  utils.h  vec3.h
src/: aabb.cc  camera.cc  hitable.cc  hitable_list.cc  material.cc  perlin_noise.cc  rect_box.cc  sphere.cc  texture.cc  utils.cc
